--- a/informe/main.tex
+++ b/informe/main.tex
@@ -5,11 +5,11 @@
 
 
 \subfile{intro}
-\subfile{inversiondesist}
+\subfile{vad}
 
-\subfile{filtroadaptativo}
+\subfile{psola}
 
-\subfile{resultados.tex}
+\subfile{resultados}
 \subfile{references}
 
 \vspace{12pt}
