--- a/informe/preamble.tex
+++ b/informe/preamble.tex
@@ -10,7 +10,7 @@
 \usepackage{float}
 \usepackage{graphicx}
 \usepackage{textcomp}
-\usepackage[pdftex,dvipsnames]{xcolor}
+%\usepackage[pdftex,dvipsnames]{xcolor}
 \usepackage{subfiles}
 \usepackage{units}
 
